--- a/it.polimi.mobilecodegenerator/utils/android_default_files/build.gradle
+++ b/it.polimi.mobilecodegenerator/utils/android_default_files/build.gradle
@@ -5,12 +5,15 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.1.2'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
